# wd-ai-hackathon

./: .env_template  .gitignore  01_web_research_planner.py  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
cool_examples/: arxiv_summary.py  search.py
notebooks/: 00_hello_world.ipynb  01_a_introduction_to_semantic_kernel.ipynb  01_b_Introduction_to_semantic_kernel.ipynb  01_c_Introduction_to_semantic_kernel.ipynb  01_d_Introduction_to_semantic_kernel.ipynb  01_introduction_to_semantic_kernel.ipynb  02_a_a_bad_plan_is_better_than_no_plan.ipynb  02_b_a_bad_plan_is_better_than_no_plan.ipynb  02_c_a_bad_plan_is_better_than_no_plan.ipynb  02_d_a_bad_plan_is_better_than_no_plan.ipynb  03_a_agents.ipynb  03_b_agents.ipynb  03_c_agents.ipynb  03_d_agents.ipynb  04_a_its_a_process.ipynb  04_b_its_a_process.ipynb  05_a_putting_it_all_together.ipynb  05_b_putting_it_all_together.ipynb  05_c_putting_it_all_together.ipynb
notebooks/.telemetry/: schwarm_events.db
notebooks/agents/: 01_simple_chat.ipynb  01_story_time_with_langgraph.ipynb  02_iterative_story_generator.ipynb
notebooks/semantic_kernel/: 01_d_Introduction_to_semantic_kernel.ipynb  01_x_Introduction_to_semantic_kernel.ipynb  02_c_a_bad_plan_is_better_than_no_plan.ipynb  02_x_a_bad_plan_is_better_than_no_plan.ipynb  03_x_agents.ipynb
