[project]
name = "wd-ai-hackathon"
version = "0.1.0"
description = "white duck AI hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
    "ruff>=0.7.3",
    "scipy>=1.14.1",
    "pydantic==2.9.2",
    "semantic-kernel>=1.14.0",
    "websearch-python>=1.2.2",
    "arxiv>=2.1.3",
    "pymgclient>=1.3.1",
    "gqlalchemy>=1.6.0",
]
